--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/HomePage.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/HomePage.html
@@ -1,3 +1,3 @@
-<wicket:extend>	
-	<table cellspacing="0" wicket:id="table" class="dataview"></table>
+<wicket:extend>
+   <table class="dataview" cellspacing="0" wicket:id="table">[table]</table>
 </wicket:extend>
