--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/componentes/ActionButtonPanel.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/componentes/ActionButtonPanel.html
@@ -1,7 +1,7 @@
 <wicket:panel xmlns:wicket="http://wicket.apache.org">
-<ul style="padding-left: 0px;margin-bottom: 0px;margin-top: 0px;">
+<ul style="border:none; padding-left: 0px;padding-top: 0px;padding-right: 0px;background: none !important; height: 15px;">
   <ui  wicket:id="LinkList">
-  	<a wicket:id="Link"><span wicket:id="label"></span></a>
+  	<a wicket:id="Link" class="classPesquisa" style="width: 20px; height: 20px"></a>k
   </ui>
 </ul>
 </wicket:panel>
