--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/login/LoginIndex.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/login/LoginIndex.html
@@ -1,4 +1,4 @@
-<wicket:extend>
+<wicket:extend xmlns:wicket="http://wicket.apache.org">
 	<form wicket:id="formulario">
 	<div class="tudo">
 		<fieldset class="div_400px">
@@ -12,8 +12,8 @@
 				<input wicket:id="password" type="text" size="30" />
 			</div>
 			<div class="div_center">
-			<input wicket:id="btnEnviar" data-form="ui-btn-up-a"
-				class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only"
+			<input wicket:id="btnEnviar"
+				
 				type="submit" name="avancar" value="Avançar" />
 			</div>
 		</fieldset>
