--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/HomePage.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/HomePage.html
@@ -1,3 +1,3 @@
-<wicket:extend>
-   <table class="dataview" cellspacing="0" wicket:id="table">[table]</table>
+<wicket:extend xmlns:wicket="http://wicket.apache.org">
+   <table cellspacing="0" style="width: 500px" wicket:id="table">[table]</table>
 </wicket:extend>
