--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/componentes/ActionButtonPanel.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/componentes/ActionButtonPanel.html
@@ -1,7 +1,7 @@
 <wicket:panel xmlns:wicket="http://wicket.apache.org">
-<ul style="border:none; padding-left: 0px;padding-top: 0px;padding-right: 0px;background: none !important; height: 15px;">
+<ul style="border:none; padding-left: 0px;padding-top: 0px;padding-right: 0px;background: none !important; height: 15px;width: 80px">
   <ui  wicket:id="LinkList">
-  	<a wicket:id="Link" class="classPesquisa" style="width: 20px; height: 20px"></a>k
+  	<a wicket:id="Link" class="" style="width: 20px; height: 20px"></a>
   </ui>
 </ul>
 </wicket:panel>
