Atualização no CSS

--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/login/LoginIndex.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/login/LoginIndex.html
@@ -4,11 +4,11 @@
 		<fieldset class="div_400px">
 			 <legend align="center"><b>Login:</b></legend>
 			<div class="margin_bottom_10 div_center">
-				<label> Nome:</label>
+				<label style="margin-right: 10px;"> Nome:</label>
 				<input wicket:id="cpf" width="200" size="30" type="text"  />
 			</div>
 			<div class="margin_bottom_10 div_center">
-				<label> Senha:</label>
+				<label style="margin-right: 10px;"> Senha:</label>
 				<input wicket:id="password" type="text" size="30" />
 			</div>
 			<div class="div_center">
