--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/login/LoginIndex.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/login/LoginIndex.html
@@ -1,22 +1,23 @@
 <wicket:extend xmlns:wicket="http://wicket.apache.org">
 	<form wicket:id="formulario">
-	<div class="tudo">
-		<fieldset class="div_400px">
-			 <legend align="center"><b>Login:</b></legend>
-			<div class="margin_bottom_10 div_center">
-				<label style="margin-right: 10px;"> Nome:</label>
-				<input wicket:id="cpf" width="200" size="30" type="text"  />
-			</div>
-			<div class="margin_bottom_10 div_center">
-				<label style="margin-right: 10px;"> Senha:</label>
-				<input wicket:id="password" type="text" size="30" />
-			</div>
-			<div class="div_center">
-			<input wicket:id="btnEnviar"
-				
-				type="submit" name="avancar" value="Avançar" />
-			</div>
-		</fieldset>
+		<div class="tudo">
+			<fieldset  class="fieldLogin">
+				<legend align="center">
+					<b>Login:</b>
+				</legend>
+				<div class="margin_bottom_10 div_center">
+					<label style="margin-right: 10px;"> Nome:</label> <input
+						wicket:id="cpf" width="200" size="30" type="text" />
+				</div>
+				<div class="margin_bottom_10 div_center">
+					<label style="margin-right: 10px;"> Senha:</label> <input
+						wicket:id="password" type="text" size="30" />
+				</div>
+				<div class="div_center">
+					<input wicket:id="btnEnviar" type="submit" name="avancar"
+						value="Avançar" />
+				</div>
+			</fieldset>
 		</div>
 	</form>
 </wicket:extend>
