--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/login/basePageLogin/BasePageLogin.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/login/basePageLogin/BasePageLogin.html
@@ -4,10 +4,28 @@
 <meta charset="utf-8" />
 <title>Grande Via Fitness</title>
 <meta content="authenticity_token" name="csrf-param" />
+<script>
+	jQuery(document).ready(function($) {
+		atualizarRelogio();
+		setInterval('atualizarRelogio()', 1000);
+	});
+</script>
 </head>
-<body class="dark">
-	<div class="classcontainer">
-		<wicket:child />
+<body class="dark" onload="atualizarRelogio()">
+
+	<div id="topo">
+		<div class="barratop">
+		<div class="pageInit">
+				<span class="spanTitulo">Grande Via Fitness</span>
+			
+				<span id="SpanHorarioData" class="SpanHorarioData"> </span>
+			</div>
+		</div>
+			
+
+	</div>
+	<div class="fieldBoxPrincipal">
+			<wicket:child />
 	</div>
 </body>
 </html>
