--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/login/basePage/BasePage.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/login/basePage/BasePage.html
@@ -12,15 +12,12 @@
 </script>
 </head>
 <body class="dark" onload="atualizarRelogio()">
-
-	<div id="topo">
 		<div class="barratop">
-			<div class="pageInit">
-				<span class="spanTitulo">Grande Via Fitness</span> <span
+				<span class="spanTitulo">Grande Via Fitness - Araraquara</span> <span
 					id="SpanHorarioData" class="SpanHorarioData"> </span>
-			</div>
 		</div>
-		<form wicket:id="formMenu">
+		<div class="clear"></div>
+		<div class="div_Menu">
 			<ul id="menu" class="Menu">
 				<li id="nav-1"><a id="Menu1Link" href="#">Cadastro</a>
 					<ul id="subnav-1">
@@ -40,9 +37,8 @@
 					</ul>
 				</li>
 			</ul>
-
-		</form>
-	</div>
+		</div>	
+		<div class="clear"></div>
 	<div class="fieldBoxPrincipal">
 		<wicket:child />
 	</div>
