--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/login/basePage/BasePage.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/login/basePage/BasePage.html
@@ -12,11 +12,12 @@
 </script>
 </head>
 <body class="dark" onload="atualizarRelogio()">
-		<div class="barratop">
-				<span class="spanTitulo">Grande Via Fitness - Araraquara</span> <span
-					id="SpanHorarioData" class="SpanHorarioData"> </span>
-		</div>
-		<div class="clear"></div>
+	<div class="barratop">
+		<span class="spanTitulo">Grande Via Fitness - Araraquara</span> <span
+			id="SpanHorarioData" class="SpanHorarioData"> </span>
+	</div>
+	<div class="clear"></div>
+	<div class="divBranca">
 		<div class="div_Menu">
 			<ul id="menu" class="Menu">
 				<li id="nav-1"><a id="Menu1Link" href="#">Cadastro</a>
@@ -24,21 +25,18 @@
 						<li><a id="SubMenu1Link" href="#">Cadastro Cliente</a></li>
 						<li><a id="SubMenu2Link" href="#">Cadastro Professor</a></li>
 						<li><a id="SubMenu2Link" href="#">Cadastro Aparelhos</a></li>
-					</ul>
-				</li>
-				<li id="nav-2"><a id="Menu2Link" href="#">Vendas</a>
-					
-				</li>
+					</ul></li>
+				<li id="nav-2"><a id="Menu2Link" href="#">Vendas</a></li>
 				<li id="nav-3"><a id="Menu3Link" href="#">Menu3</a>
 					<ul id="subnav-3">
 						<li><a id="SubMenu5Link" href="#">SubMenu5</a></li>
 						<li><a id="SubMenu6Link" href="#">SubMenu6</a></li>
 						<li><a id="SubMenu7Link" href="#">SubMenu7</a></li>
-					</ul>
-				</li>
+					</ul></li>
 			</ul>
-		</div>	
-		<div class="clear"></div>
+		</div>
+	</div>
+	<div class="clear"></div>
 	<div class="fieldBoxPrincipal">
 		<wicket:child />
 	</div>
