--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/login/LoginIndex.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/login/LoginIndex.html
@@ -1,4 +1,5 @@
 <wicket:extend xmlns:wicket="http://wicket.apache.org">
+<div  class="div_center">
 	<form wicket:id="formulario">
 			<fieldset class="fieldLogin">
 				<legend align="center">
@@ -20,4 +21,5 @@
 					</div>
 			</fieldset>
 	</form>
+</div>	
 </wicket:extend>
