--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/login/basePage/BasePage.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/login/basePage/BasePage.html
@@ -12,38 +12,52 @@
 </script>
 </head>
 <body class="dark" onload="atualizarRelogio()">
-	<div class="barratop">
+	<div class="barratop borderVermelha">
 		<div class="div_tam">
-			<span class="spanTitulo">Grande Via Fitness</span> <span
-				id="SpanHorarioData" class="SpanHorarioData"> </span>
 		</div>
 	</div>
 	<div class="Layout_Fundo">
-		<div class="fundoTopo div_tam"></div>
+		<div class="fundoTopo ">
+			<div class="div_tam" style="height: 118px;">
+			<h2 class="loganGrand" >Grande Via Fitness</h2>
+			</div>
+		</div>
 	</div>
-	<div class="divBranca">
+	<div class="divBranca borderVermelha">
+		<span id="SpanHorarioData" class="SpanHorarioData"> </span>
 		<div class="div_tam">
 			<ul id="menu" class="Menu">
-				<li id="nav-1"><a id="Menu1Link" href="#">Cadastro</a>
+				<li id="nav-1">
+					<a id="Menu1Link" class="menuRedendoLeft" href="#">Cadastro
+					</a>
 					<ul id="subnav-1">
 						<li><a id="SubMenu1Link" href="#">Cadastro Cliente</a></li>
 						<li><a id="SubMenu2Link" href="#">Cadastro Professor</a></li>
 						<li><a id="SubMenu2Link" href="#">Cadastro Aparelhos</a></li>
 					</ul></li>
 
-				<li id="nav-2"><a id="Menu2Link" href="#">Vendas</a>
+				<li id="nav-2">
+					<a id="Menu2Link" href="#">Vendas
+					</a>
 					<ul id="subnav-3">
 						<li><a id="SubMenu5Link" href="#">SubMenu5</a></li>
 						<li><a id="SubMenu6Link" href="#">SubMenu6</a></li>
 						<li><a id="SubMenu7Link" href="#">SubMenu7</a></li>
 					</ul></li>
-				<li id="nav-3"><a id="Menu3Link" href="#">Menu3</a></li>
+				<li id="nav-3"><a id="Menu3Link" class="menuRedendoRight" href="#">Menu3</a></li>
 			</ul>
 		</div>
+		
 	</div>
 	<div class="clear"></div>
-	<div class="div_tam">
 		<wicket:child />
+	<div class="divBrancaBotton borderVermelha">
+	</div>
+	<div class="Layout_FundoBotton">
+		<div class="fundoBottom ">
+			<div class="div_tam" style="height: 118px;">
+			</div>
+		</div>
 	</div>
 </body>
 </html>
