--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/login/LoginIndex.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/login/LoginIndex.html
@@ -1,25 +1,29 @@
 <wicket:extend xmlns:wicket="http://wicket.apache.org">
-<div  class="div_center">
-	<form wicket:id="formulario">
+	<div class="div_center">
+		<form wicket:id="formulario">
+			 <span wicket:id="feedback" class="feedback" />
 			<fieldset class="fieldLogin">
 				<legend align="center">
 					<b>Login:</b>
 				</legend>
-					<div class="div_LabelCenter">
-						<div class="div_label">
-						<label> Nome:</label> <br/>
-						</div>
-						<input class="campoText" wicket:id="cpf" type="text" />
+				<div class="div_LabelCenter">
+					<div class="div_label">
+						<label> Nome:</label> <br />
 					</div>
-					<div class="div_LabelCenter">
-						<label > Senha:</label> <br/>
-						 <input	class="campoText" wicket:id="password" type="text"/>
+					<input class="campoText" wicket:id="cpf" type="text" />
+				</div>
+				<div class="div_LabelCenter">
+					<div class="div_label">
+						<label> Senha:</label> <br />
 					</div>
-					<div class="div_LabelCenter">
-						<input wicket:id="btnEnviar" class="botao" type="submit" name="avancar" value="Entrar" />
-						<input wicket:id="btnLimpar" class="botao" type="submit" name=Limpar value="Limpar" />
-					</div>
+					<input class="campoText" wicket:id="password" type="text" />
+				</div>
+				<div class="div_LabelCenter">
+					<input wicket:id="btnEnviar" class="botao" type="submit"
+						name="avancar" value="Entrar" /> <input wicket:id="btnLimpar"
+						class="botao" type="submit" name=Limpar value="Limpar" />
+				</div>
 			</fieldset>
-	</form>
-</div>	
+		</form>
+	</div>
 </wicket:extend>
