GrandeViaFitness Inicial Funcionando

--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/login/basePage/BasePage.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/login/basePage/BasePage.html
@@ -24,6 +24,7 @@
 	</div>
 
 	<div class="divBranca borderVermelha">
+		<div wicket:id="containerUsuario" class="divUsuarioLogado" >Usuario Logado: <span wicket:id="nomeUsuario"></span></div>
 		<span id="SpanHorarioData" class="SpanHorarioData"> </span>
 		<div wicket:id="containerMenu">
 			<div class="div_tam">
