--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/login/basePage/BasePage.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/login/basePage/BasePage.html
@@ -24,12 +24,14 @@
 	</div>
 
 	<div class="divBranca borderVermelha">
-		<div wicket:id="containerUsuario" class="divUsuarioLogado" >Usuario Logado: <span wicket:id="nomeUsuario"></span></div>
+		<div wicket:id="containerUsuario" class="divUsuarioLogado">
+			Usuario Logado: <span wicket:id="nomeUsuario"></span>
+		</div>
 		<span id="SpanHorarioData" class="SpanHorarioData"> </span>
 		<div wicket:id="containerMenu">
 			<div class="div_tam">
 				<ul id="menu" class="Menu">
-					<li id="nav-1"><a id="Menu1Link" class="menuRedendoLeft"
+					<li id="nav-1" style="z-index: 1" ><a id="Menu1Link" class="menuRedendoLeft"
 						href="#">Cadastro </a>
 						<ul id="subnav-1" class="ultimoLinkBottomLeft">
 							<li><a id="SubMenu1Link" href="#">Cadastro Cliente</a></li>
@@ -38,19 +40,20 @@
 								href="#">Cadastro Aparelhos</a></li>
 						</ul></li>
 
-					<li id="nav-2"><a id="Menu2Link" href="#">Vendas </a>
+					<li id="nav-2"  style="z-index: 1" ><a id="Menu2Link" href="#">Vendas </a>
 						<ul id="subnav-3" class="ultimoLinkBottomLeft">
 							<li><a id="SubMenu5Link" href="#">SubMenu5</a></li>
 							<li><a id="SubMenu6Link" href="#">SubMenu6</a></li>
 							<li><a id="SubMenu7Link" class="ultimoLinkBottomLeft"
 								href="#">SubMenu7</a></li>
 						</ul></li>
-					<li id="nav-3"><a id="Menu3Link" class="menuRedendoRight"
+					<li id="nav-3"  style="z-index: 1" ><a id="Menu3Link" class="menuRedendoRight"
 						href="#">Menu3</a></li>
 				</ul>
 			</div>
 		</div>
 	</div>
+	<div class="clear"></div>
 	<div class="clear"></div>
 	<div class="minmuHeight">
 		<wicket:child />
@@ -58,8 +61,18 @@
 	<div class="divBrancaBotton borderVermelha"></div>
 	<div class="Layout_FundoBotton">
 		<div class="fundoBottom ">
-			<div class="div_tam" style="height: 118px;"></div>
+			<div class="div_tam" style="height: 118px;">
+				<div class="boxBottomRight">Todos os direitos reservados - ©
+					2014</div>
+				<div class="boxBottomLeft">
+					<p>
+						Grande Via Fitness<br> Desenvolvimento: Alan Fagner Gonçalves<br>
+						Telefone: (16) 997578380
+					</p>
+				</div>
+			</div>
 		</div>
 	</div>
+	<div wicket:id="feedback" class="feedBack ui-shadow"></div>
 </body>
 </html>
