--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/HomePageIndex.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/HomePageIndex.html
@@ -1,5 +1,9 @@
 <wicket:extend xmlns:wicket="http://wicket.apache.org">
 	<form wicket:id="formulario">
-		<div wicket:id="feedback"></div>
+		<div class="div_center">
+			<div class="center bemvindo">
+				<h1>Bem Vindo.</h1>
+			</div>
+		</div>
 	</form>
 </wicket:extend>
