Pagina de Cadastros Clientes

--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/login/LoginIndex.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/login/LoginIndex.html
@@ -3,7 +3,7 @@
 		<br> <br> <br>
 		<form wicket:id="formulario">
 			<fieldset class="fieldLogin">
-				<legend align="center">
+				<legend class="legenda">
 					<b>Login:</b>
 				</legend>
 				<div class="div_LabelCenter">
