--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/HomePageIndex.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/HomePageIndex.html
@@ -2,7 +2,8 @@
 	<form wicket:id="formulario">
 		<div class="div_center">
 			<div class="center bemvindo">
-				<h1>Bem Vindo.</h1>
+				<h1>Bem Vindo</h1><br>
+				<h2>Sistema de Genreciamento Grande Via Fitness</h2>
 			</div>
 		</div>
 	</form>
