New CadastroBanco de dados

--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/login/LoginIndex.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/login/LoginIndex.html
@@ -8,9 +8,9 @@
 				</legend>
 				<div class="div_LabelCenter">
 					<div class="div_label">
-						<label> Nome:</label> <br />
+						<label> CPF:</label> <br />
 					</div>
-					<input class="campoText" style="width: 200px;" wicket:id="cpf"
+					<input class="cpf campoText" style="width: 200px;" wicket:id="cpf"
 						type="text" />
 				</div>
 				<div class="div_LabelCenter">
