--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/login/basePage/BasePage.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/login/basePage/BasePage.html
@@ -5,7 +5,7 @@
 <title>Grande Via Fitness</title>
 <meta content="authenticity_token" name="csrf-param" />
 </head>
-<body class="dark" onload="atualizarRelogio()">
+<body class="dark" onload="atualizarRelogio(); addScriptCss()">
 	<div class="barratop borderVermelha">
 		<div class="div_tam"></div>
 	</div>
