--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/cliente/consultar/ConsultarClienteIndex.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/cliente/consultar/ConsultarClienteIndex.html
@@ -13,8 +13,7 @@
 					</div>
 				</fieldset>
 				<div class="clear"></div>
-				<table cellspacing="0" style="width: 500px" wicket:id="table">[table]
-				</table>
+				<table cellspacing="0" style="width: 500px" wicket:id="table"></table>
 				<div class="clear"></div>
 				<div class="grid_5" style="margin-left: 30px;">
 					<input wicket:id="btnNovoCliente" class="botao" type="submit" name="avancar" value="Cadastrar Novo Usuario" /> <input
