--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/cliente/cadastrar/CadastrarAlterarClienteIndex.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/cliente/cadastrar/CadastrarAlterarClienteIndex.html
@@ -37,7 +37,7 @@
 					</div>
 					<div class="clear"></div>
 					<div class="LabelInputNome grid_2">
-						<label> CEP:</label> <input type="text" maxlength="100" wicket:id="endereco.cep" class="campoText" />
+						<label> CEP:</label> <input type="text" maxlength="100" wicket:id="endereco.cep" class="cep campoText" />
 					</div>
 					<div class="LabelInputNome grid_2">
 						<label> Numero:</label> <input type="text" maxlength="100" wicket:id="numeroResidencial" class="campoText" />
