--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/cliente/cadastrar/CadastrarAlterarClienteIndex.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/cliente/cadastrar/CadastrarAlterarClienteIndex.html
@@ -23,10 +23,10 @@
 						<label> Email:</label> <input type="text" maxlength="100" wicket:id="emailPessoa" class="campoText" />
 					</div>
 					<div class="LabelInputNome grid_3">
-						<label> Data de Nascimento:</label> <input type="text" maxlength="10" wicket:id="dataNascimentoPessoa" class="campoText" />
+						<label> Data de Nascimento:</label> <input type="text" maxlength="10" wicket:id="dataNascimentoPessoa" class=" data campoText" />
 					</div>
 					<div class="LabelInputNome grid_4">
-						<label> Telefone Celular:</label> <input type="text" maxlength="10" wicket:id="numeroCelulaPessoa" class="campoText" />
+						<label> Telefone Celular:</label> <input type="text" maxlength="10" wicket:id="numeroCelulaPessoa" class="telefone campoText" />
 					</div>
 					<div class="clear"></div>
 					<div class="LabelInputNome grid_3">
