--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/cliente/consultar/ConsultarClienteIndex.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/cliente/consultar/ConsultarClienteIndex.html
@@ -1,7 +1,7 @@
 <wicket:extend xmlns:wicket="http://wicket.apache.org">
 	<form wicket:id="formulario">
 		<div class="div_center">
-			<div style="height: 300px">
+			<div style="height: 400px">
 				<fieldset>
 					<legend class="legenda" align="left">Consultar Clientes</legend>
 
@@ -13,7 +13,10 @@
 					</div>
 				</fieldset>
 				<div class="clear"></div>
+				<div class="divGrid">
 				<table cellspacing="0" style="width: 500px" wicket:id="table"></table>
+
+				</div>
 				<div class="clear"></div>
 				<div class="grid_5" style="margin-left: 30px;">
 					<input wicket:id="btnNovoCliente" class="botao" type="submit" name="avancar" value="Cadastrar Novo Usuario" /> <input
