--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/componentes/CustomPagingNavigator.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/componentes/CustomPagingNavigator.html
@@ -1,23 +1,8 @@
 <wicket:panel xmlns:wicket="http://wicket.apache.org">
 	<div>
 		<div>
-			Items per page: <span wicket:id="itemsPerPage"> <a wicket:id="itemPerPageLink"><span wicket:id="itemsValue"></span></a>
+			Items por pagina: <span wicket:id="itemsPerPage"> <a wicket:id="itemPerPageLink"><span wicket:id="itemsValue"></span></a>
 			</span>
-		</div>
-		<div wicket:id="pagingLinksContainer">
-			<table>
-				<tbody>
-					<tr valign="top">
-						<td><a wicket:id="first" href=""> <span>Primeira</span>
-						</a></td>
-						<td><a wicket:id="prev" href=""> <span>Anterior</span>
-						</a></td>
-						<td wicket:id="navegar"><a wicket:id="pageLink"><span wicket:id="pageNumber">5</span></a></td>
-						<td><a wicket:id="next" href="#"> <span>Próxima</span></a></td>
-						<td><a wicket:id="last" href="#"> <span>Ultima</span></a></td>
-					</tr>
-				</tbody>
-			</table>
 		</div>
 	</div>
 </wicket:panel>
