--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/cliente/consultar/ConsultarClienteIndex.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/cliente/consultar/ConsultarClienteIndex.html
@@ -1,7 +1,7 @@
 <wicket:extend xmlns:wicket="http://wicket.apache.org">
 	<form wicket:id="formulario">
 		<div class="div_center">
-			<div style="height: 400px">
+			<div >
 				<fieldset>
 					<legend class="legenda" align="left">Consultar Clientes</legend>
 
@@ -18,7 +18,7 @@
 
 				</div>
 				<div class="clear"></div>
-				<div class="grid_5" style="margin-left: 30px;">
+				<div class="grid_6" style="margin-left: 30px;">
 					<input wicket:id="btnNovoCliente" class="botao" type="submit" name="avancar" value="Cadastrar Novo Usuario" /> <input
 						wicket:id="btnVoltar" class="botao" type="submit" name=Limpar value="Voltar"
 					/>
