--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/cliente/consultar/ConsultarClienteIndex.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/cliente/consultar/ConsultarClienteIndex.html
@@ -14,7 +14,7 @@
 				</fieldset>
 				<div class="clear"></div>
 				<div class="divGrid">
-				<table cellspacing="0" style="width: 500px" wicket:id="table"></table>
+				<table cellspacing="0" class="gridGenerica" wicket:id="table"></table>
 
 				</div>
 				<div class="clear"></div>
