--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/componentes/gridGenerica/CustomNavigator.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/componentes/gridGenerica/CustomNavigator.html
@@ -2,7 +2,13 @@
 	<tr class="navigation">
 		<td wicket:id="span">
 			<div style="float: left">
-			Items por pagina: <span wicket:id="itemsPerPage" class="botaoA"> <a wicket:id="itemPerPageLink"><span wicket:id="itemsValue"></span></a>
+			Items por pagina: 
+			<span wicket:id="itemsPerPage" class="botaoA">
+				<span class="redendo">
+					<a wicket:id="itemPerPageLink">
+						<span wicket:id="itemsValue"></span>
+					</a>
+				</span> 
 			</span>
 			</div>
 			<div class="navigator"><div wicket:id="navigator">[navigator]</div></div>
