--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/cliente/consultar/ConsultarClienteIndex.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/cliente/consultar/ConsultarClienteIndex.html
@@ -11,12 +11,14 @@
 					<div class="LabelInputNome grid_3">
 						<label> CPF:</label> <input type="text" maxlength="100" class="campoText" />
 					</div>
-				</fieldset>
-				<div class="clear"></div>
-				<div class="divGrid">
-					<table cellspacing="0" style="width: 500px" wicket:id="table"></table>
+					
+									<div class="dataTables_wrapper">
+				
+				<table class="display  dataTable" cellspacing="0" style="width: 90%; border: 1px;" wicket:id="table"></table>
 
 				</div>
+				</fieldset>
+				<div class="clear"></div>
 				<div class="clear"></div>
 				<div class="grid_6" style="margin-left: 30px;">
 					<input wicket:id="btnNovoCliente" class="botao" type="submit" name="avancar" value="Cadastrar Novo Usuario" /> <input
