--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/componentes/gridGenerica/CustomNavigator.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/componentes/gridGenerica/CustomNavigator.html
@@ -2,16 +2,22 @@
 	<tr class="navigation">
 		<td wicket:id="span">
 			<div style="float: left">
-			Items por pagina: 
-			<span wicket:id="itemsPerPage" class="botaoA">
-				<span class="redendo">
-					<a wicket:id="itemPerPageLink">
-						<span wicket:id="itemsValue"></span>
-					</a>
-				</span> 
-			</span>
+			<div class="dataTables_paginate paging_simple_numbers">
+				Items por pagina:
+				
+					<span wicket:id="itemsPerPage" class="paginate_button"> 
+						<span class="redendo"> 
+							<a wicket:id="itemPerPageLink"> 
+						<span wicket:id="itemsValue"
+							></span>
+						</a>
+					</span>
+					</span>
+				</div>
 			</div>
-			<div class="navigator"><div wicket:id="navigator">[navigator]</div></div>
+			<div class="navigator">
+				<div wicket:id="navigator">[navigator]</div>
+			</div>
 		</td>
 	</tr>
 </wicket:panel>
