--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/componentes/gridGenerica/CustomPagingNavigator.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/componentes/gridGenerica/CustomPagingNavigator.html
@@ -1,9 +1,19 @@
-<wicket:panel  xmlns:wicket="http://wicket.apache.org">
-	<a wicket:id="first" class="first">&lt;&lt;</a>
-	<a wicket:id="prev" class="prev">&lt;</a>
-	<span wicket:id="navigation" class="goto">
-		<a wicket:id="pageLink" href="#"><span wicket:id="pageNumber">5</span></a>
-	</span>
-	<a wicket:id="next" class="next">&gt;</a>
-	<a wicket:id="last" class="last">&gt;&gt;</a>
+<wicket:panel xmlns:wicket="http://wicket.apache.org">
+	<div class="dataTables_paginate paging_simple_numbers">
+		<div class="especial">
+			<a wicket:id="first">Primeiro</a> 
+			<a wicket:id="prev">Anterior</a>
+		</div>
+		<div>
+			<span wicket:id="navigation" class="paginate_button"> 
+				<a wicket:id="pageLink" href="#"> 
+					<span wicket:id="pageNumber">5</span>
+				</a>
+			</span>
+		</div>
+		<div class="especial">
+			 <a wicket:id="next" class="next">Proximo</a> 
+			 <a wicket:id="last" class="last">Ultimo</a>
+		</div>
+	</div>
 </wicket:panel>
