--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/cliente/consultar/ConsultarClienteIndex.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/cliente/consultar/ConsultarClienteIndex.html
@@ -24,9 +24,11 @@
 
 					<div class="dataTables_wrapper">
 						<table class="display  dataTable" cellspacing="0" style="width: 90%; border: 1px;" wicket:id="table"></table>
+						<div class="msgERROR" wicket:id="containerVazio">
+							Nenhum registro encontrado!
+						</div>
 					</div>
 				</fieldset>
-				<div class="clear"></div>
 				<div class="clear"></div>
 				<div class="grid_6" style="margin-left: 30px;">
 					<input wicket:id="btnNovoCliente" class="botao" type="submit" name="avancar" value="Cadastrar Novo Usuario" /> <input
