Modal Super Hiper Legal

--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/cliente/consultar/ConsultarClienteIndex.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/cliente/consultar/ConsultarClienteIndex.html
@@ -1,6 +1,7 @@
 <wicket:extend xmlns:wicket="http://wicket.apache.org">
 	<form wicket:id="formulario">
 		<div class="div_center">
+		<div wicket:id="modal"></div>
 			<div>
 				<fieldset>
 					<legend class="legenda" align="left" >Consultar Clientes</legend>
