--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/login/basePage/BasePage.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/login/basePage/BasePage.html
@@ -31,7 +31,7 @@
 							<li><a id="SubMenu1Link" href="#">Cadastro Produtos</a></li>
 							<li><a wicket:id="consultarCliente" href="#">Cadastro Cliente</a></li>
 							<li><a id="SubMenu2Link" href="#">Cadastro Professor</a></li>
-							<li><a wicket:id="consultarAparelhos" class="ultimoLinkBottomLeft"
+							<li><a wicket:id="consultarExercicio" class="ultimoLinkBottomLeft"
 								href="#">Cadastro Exercício</a></li>
 						</ul></li>
 
